More keyboard shortcuts

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 			<table width="100%">
 				<tr>
 					<td>Test level</td>
-					<td>~</td>
+					<td>~ (tilde)</td>
 				</tr>
 				<tr>
 					<td>Move tool</td>
@@ -290,20 +290,52 @@
 					<td>Ctrl+V</td>
 				</tr>
 				<tr>
+					<td>Copy color properties</td>
+					<td>Shift+C</td>
+				</tr>
+				<tr>
+					<td>Paste color properties</td>
+					<td>Shift+V</td>
+				</tr>
+				<tr>
+					<td>Copy light color properties</td>
+					<td>Ctrl+Shift+C</td>
+				</tr>
+				<tr>
+					<td>Paste light color properties</td>
+					<td>Ctrl+Shift+V</td>
+				</tr>
+				<tr>
 					<td>Undo</td>
 					<td>Ctrl+Z</td>
+				</tr>
+				<tr>
+					<td>Redo</td>
+					<td>Ctrl+Y</td>
 				</tr>
 				<tr>
 					<td>Duplicate</td>
 					<td>Ctrl+D</td>
 				</tr>
 				<tr>
-					<td>Attach</td>
+					<td>Create group</td>
+					<td>Ctrl+G</td>
+				</tr>
+				<tr>
+					<td>Ungroup</td>
+					<td>Shift+G</td>
+				</tr>
+				<tr>
+					<td>Attach to road</td>
 					<td>Shift+A</td>
 				</tr>
 				<tr>
 					<td>Move (attached objects)</td>
 					<td>M</td>
+				</tr>
+				<tr>
+					<td>Move to cursor's position</td>
+					<td>Shift+S</td>
 				</tr>
 				<tr>
 					<td>Align to cursor's rotation</td>
