--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 			Let's start by placing a lamp on the track. First move the cursor so it's on the side (or railing) of the track you want the lamp to be on. Add an <b>EmpireLamp</b> from the "Decorations" folder. Once you placed the lamp make sure it looks like its actually connected to the track! Use Alt + S to rotate it correctly, and use the movement gizmos to get the alignment just right. Once it looks like it's actually connected to the track, attach it (<b>Shift + A</b>). Once we have done this it will follow the road if we move it and we can easily duplicate it just like the checkpoints.
 
 			<div class="infobox">
-				Once you attach an object to the track, you can press <b>F</b> to flip it to the other side of the track. This is really useful for putting lamps on the other side of the track. Use this in combination with duplicating them to easily place lamps throughout the level.
+				Once you attach an object to the track, you can press <b>M</b> and then <b>F</b> to flip it to the other side of the track. This is really useful for putting lamps on the other side of the track. Use this in combination with duplicating them to easily place lamps throughout the level.
 			</div>
 		</div>
 
