Some quick tweaks

--- a/index.html
+++ b/index.html
@@ -117,10 +117,11 @@
 			If you test the level (<b>~</b>), you'll notice that the lasers rotate back and forth. You can change the speed of the rotation, among other things. Go back to the editor, and click the obstacle to select it. Then click the <b>properties</b> tab in the menu on the right-hand side. Scroll down to the section "RigidbodyAxisRotationLogic". There, you can change various aspects about how the lasers rotate. Try increasing AngularSpeed and RotationBounds. You can use the arrows on the side of the text field, click and drag, or enter a number directly. Then test the level. The lasers should be rotating farther and faster than before.
 
 			<div class="infobox">
-				Every object is made up of different <b>components</b>, and these are what the different sections represent in the properties tab. The component system is just a result of Distance using the engine Unity, and it's not super important for the user. Just know that each section is a different "building block" of the object.
+				Every object is made up of different <b>components</b>, and these are what the different sections represent in the properties tab. The component system is just a result of Distance using the Unity engine, and it's not super important for the user. Just know that each section is a different "building block" of the object.
 			</div>
 		</div>
 
+		<span id='basics6'></span>
 		<div class="section">
 			<h2>Uploading to Steam Workshop</h2>
 			Is your level done? It's time to upload it, then! First, check a few things:
