Preliminary skips section

--- a/index.html
+++ b/index.html
@@ -226,12 +226,27 @@
 		<span id='design'></span>
 		<h1>Level Design</h1>
 		<div class="mininav">
-			<a data-scroll href="#design1">Introduction</a>
+
 			<a data-scroll href="#design1">Themes</a>
-			<a data-scroll href="#design1">Difficulty</a>
-			<a data-scroll href="#design1">Heat Management</a>
-			<a data-scroll href="#design1">Skips</a>
+			<a data-scroll href="#design2">Difficulty</a>
+			<a data-scroll href="#design3">Heat Management</a>
+			<a data-scroll href="#design4">Skips</a>
 		</div>
+
+		<span id="design4"></span>
+		<div class="section">
+			<h2>Skips</h2>
+			Skips. The bane of casual players everywhere!<br/><br/>
+
+			Skips are a reality of virtually every Distance map. Unless your map is a straight line, there will be some way to cut corners and skip things. Understandably, this is disappointing to map makers, as people can skip over the track they worked so hard on. It's also disappointing to casual players who feel like they can't compete with people who know skips.<br/><br/>
+
+			However, skips are not a bad thing! There is beauty and creativity in breaking the intended path of a track, and more importantly, you really can't prevent skips in Distance. The car has rotational thrusters, a powerful booster, and wings. If a player wants to go somewhere, there's nothing you can really do to stop them. So embrace the skips! Skips are fun and good.<br/><br/>
+
+			That being said, there's still things you can and should do to prevent really egregious skips. Here are some good principles:
+			<li>Avoid having the track loop back on itself. This is just asking for someone to jump up onto the higher/lower track and skip a buch of stuff.</li>
+			<li>Keep the track on a relatively straight path. That doesn't mean not to have turns, but the more curves you have, the more a player can cut across those curves. Keep the curves shallow.</li>
+			<li>Uphill tracks are harder to skip than downhill tracks.</li>
+			<li><b>Don't</b> turn off boosters or rotational thrusters to prevent skips. It'll make the level less fun, which isn't worth it, and CyclopsDragon will probably find a skip anyway.</li>
 
 		<span id='glossary'></span>
 		<h1>Glossary</h1>
