--- a/index.html
+++ b/index.html
@@ -243,10 +243,13 @@
 			However, skips are not a bad thing! There is beauty and creativity in breaking the intended path of a track, and more importantly, you really can't prevent skips in Distance. The car has rotational thrusters, a powerful booster, and wings. If a player wants to go somewhere, there's nothing you can really do to stop them. So embrace the skips! Skips are fun and good.<br/><br/>
 
 			That being said, there's still things you can and should do to prevent really egregious skips. Here are some good principles:
-			<li>Avoid having the track loop back on itself. This is just asking for someone to jump up onto the higher/lower track and skip a buch of stuff.</li>
-			<li>Keep the track on a relatively straight path. That doesn't mean not to have turns, but the more curves you have, the more a player can cut across those curves. Keep the curves shallow.</li>
-			<li>Uphill tracks are harder to skip than downhill tracks.</li>
-			<li><b>Don't</b> turn off boosters or rotational thrusters to prevent skips. It'll make the level less fun, which isn't worth it, and CyclopsDragon will probably find a skip anyway.</li>
+			<ul>
+				<li>Avoid having the track loop back on itself. This is just asking for someone to jump up onto the higher/lower track and skip a buch of stuff.</li>
+				<li>Keep the track on a relatively straight path. That doesn't mean not to have turns, but the more curves you have, the more a player can cut across those curves. Keep the curves shallow.</li>
+				<li>Uphill tracks are harder to skip than downhill tracks.</li>
+				<li>Add shortcuts! Now they're intentional, so they're not skips.</li>
+				<li><b>Don't</b> turn off boosters or rotational thrusters to prevent skips. It'll make the level less fun, which isn't worth it, and CyclopsDragon will probably find a skip anyway.</li>
+			</ul>
 
 		<span id='glossary'></span>
 		<h1>Glossary</h1>
