--- a/index.html
+++ b/index.html
@@ -233,6 +233,18 @@
 			<a data-scroll href="#design4">Skips</a>
 		</div>
 
+		<span id="design3"></span>
+		<div class="section">
+			<h2>Heat management</h2>
+			In some racing games, the boost is something you use occasionally when you want to go extra fast. In Distance, it's something you want to use <b>constantly</b>. Howveer, boosting causes your car to heat up and eventually overheat, and the only things that can cool you down are cooldown rings, checkpoints, and tricks.<br/><br/>
+
+			So if you want the player to be boosting all the time, you should put in plenty of cooldown rings and checkpoints! It's pretty easy to do this right, just test your level and make sure you can get through the whole thing without overheating. It feels even better if your cooldown rings and checkpoints are spaced out so you're almost overheating as you reach them, but that's not super important.
+
+			<div class="infobox">
+				Long stretches of road can act as places to cooldown, as people can take the opportunity to do tricks while they're not busy avoiding obstacles.
+			</div>
+		</div>
+
 		<span id="design4"></span>
 		<div class="section">
 			<h2>Skips</h2>
@@ -250,6 +262,7 @@
 				<li>Add shortcuts! Now they're intentional, so they're not skips.</li>
 				<li><b>Don't</b> turn off boosters or rotational thrusters to prevent skips. It'll make the level less fun, which isn't worth it, and CyclopsDragon will probably find a skip anyway.</li>
 			</ul>
+		</div>
 
 		<span id='glossary'></span>
 		<h1>Glossary</h1>
@@ -373,7 +386,12 @@
 
 		<div class="section">
 			<h2>Credits</h2>
-			This guide is written by Krispy (@KrispyVG) and Tesselode (@aspinach). Banner art by Jam (@QuixoticJam).
+			This guide is written by Krispy (@KrispyVG) and Tesselode (@aspinach). Banner art by Jam (@QuixoticJam).<br/><br/>
+
+			People who also helped:
+			<ul>
+				<li>CyclopsDragon</li>
+			</ul>
 		</div>
 	</div>
 
