--- a/index.html
+++ b/index.html
@@ -220,7 +220,6 @@
 			Caring about your FPS is very important. Especially because a lot of people play distance on different computers. One level that works 100% flawlessly on one computer might be completely un-playable on another. So even if you are just getting a tiny decrease in your FPS after adding 200 buildings to your level, it's still worth considering decreasing that again if you are on a good computer.</br></br>
 
 			Its hard to set a bar for what's an acceptable FPS in any given community level. Just remember, playability MUST come first.
-
 		</div>
 
 		<span id='design'></span>
@@ -260,7 +259,7 @@
 				<li>Keep the track on a relatively straight path. That doesn't mean not to have turns, but the more curves you have, the more a player can cut across those curves. Keep the curves shallow.</li>
 				<li>Uphill tracks are harder to skip than downhill tracks.</li>
 				<li>Add shortcuts! Now they're intentional, so they're not skips.</li>
-				<li><b>Don't</b> turn off boosters or rotational thrusters to prevent skips. It'll make the level less fun, which isn't worth it, and CyclopsDragon will probably find a skip anyway.</li>
+				<li><b>Don't</b> turn off boosters, rotational thrusters, or jumping to prevent skips (unless it's important to the feel of the level). It'll make the level less fun in most cases, which isn't worth it, and it won't make the level skip-proof.
 			</ul>
 		</div>
 
