Fixed some typos

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 			<h2>Colors</h2>
 			Utilizing colours is an important part of level editing in Distance. All of the objects are made up of different components, some of which represent behavior and some of which are physical components. Many of the physical components have color properties you can change. The different properties are:
 			<ul>
-				<li><b>Color</b>: This usually refers to the largest continuous part of the object. In the case of buildings its a good idea to set this to something thats easy on the eyes, as this will be one of the most prominent colors in your level.</li>
+				<li><b>Color</b>: This usually refers to the largest continuous part of the object. In the case of buildings its a good idea to set this to something that's easy on the eyes, as this will be one of the most prominent colors in your level.</li>
 				<li><b>Spec color</b>: This is the reflective value. Its layered on top of the "color" of the object and is only shown relative to what angle the player camera is looking at it from.</li>
 				<li><b>Emit color</b>: This slot often refers to a "glowing" part of the object, and its a really good place to enforce the bright and most prominent colors of your overall theme.</li>
 			</ul>
@@ -196,7 +196,7 @@
 
 		<span id="visuals4"></span>
 		<div class="section">
-			<h2>Bulidings</h2>
+			<h2>Buildings</h2>
 			Adding buildings is simple. First, go to the <b>"Buildings"</b> folder in the library. Once you've found the building you want to add, double click it to spawn it at the cursor location. You can then move and rotate the building to where you want them using the move, rotate, and scale gizmos.
 
 			<div class="infobox">
@@ -235,7 +235,7 @@
 		<span id="design3"></span>
 		<div class="section">
 			<h2>Heat management</h2>
-			In some racing games, the boost is something you use occasionally when you want to go extra fast. In Distance, it's something you want to use <b>constantly</b>. Howveer, boosting causes your car to heat up and eventually overheat, and the only things that can cool you down are cooldown rings, checkpoints, and tricks.<br/><br/>
+			In some racing games, the boost is something you use occasionally when you want to go extra fast. In Distance, it's something you want to use <b>constantly</b>. However, boosting causes your car to heat up and eventually overheat, and the only things that can cool you down are cooldown rings, checkpoints, and tricks.<br/><br/>
 
 			So if you want the player to be boosting all the time, you should put in plenty of cooldown rings and checkpoints! It's pretty easy to do this right, just test your level and make sure you can get through the whole thing without overheating. It feels even better if your cooldown rings and checkpoints are spaced out so you're almost overheating as you reach them, but that's not super important.
 
@@ -255,7 +255,7 @@
 
 			That being said, there's still things you can and should do to prevent really egregious skips. Here are some good principles:
 			<ul>
-				<li>Avoid having the track loop back on itself. This is just asking for someone to jump up onto the higher/lower track and skip a buch of stuff.</li>
+				<li>Avoid having the track loop back on itself. This is just asking for someone to jump up onto the higher/lower track and skip a bunch of stuff.</li>
 				<li>Keep the track on a relatively straight path. That doesn't mean not to have turns, but the more curves you have, the more a player can cut across those curves. Keep the curves shallow.</li>
 				<li>Uphill tracks are harder to skip than downhill tracks.</li>
 				<li>Add shortcuts! Now they're intentional, so they're not skips.</li>
