--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 				<li>Keep the track on a relatively straight path. That doesn't mean not to have turns, but the more curves you have, the more a player can cut across those curves. Keep the curves shallow.</li>
 				<li>Uphill tracks are harder to skip than downhill tracks.</li>
 				<li>Add shortcuts! Now they're intentional, so they're not skips.</li>
-				<li><b>Don't</b> turn off boosters, rotational thrusters, or jumping to prevent skips (unless it's important to the feel of the level). It'll make the level less fun in most cases, which isn't worth it, and it won't make the level skip-proof.
+				<li>Turning off the car's abilities (boosters, rotational thrusters, and jumping) is not generally an effective way to prevent skips. It's one thing to do it for thematic reasons, but doing it just to prevent skips will just making your level less fun.
 			</ul>
 		</div>
 
