--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
 			Now we want to make the branching paths meet back up later without the track getting crooked. Duplicate the EmpireRoadTriSplit (<b>Ctrl+D</b>). Whenever you duplicate an object, you can move the mouse to move the new object around freely, but we don't want this, so press <b>ESC</b> to exit this mode. Instead, use the move gizmo to move the new EmpireRoadTriSplit in the direction of the track. Then, go to <b>Tools>Rotate Object 180 around Y axis</b> in the menu bar. This flips the object around so it's facing the other way. Move this object as far away from the track as you want.<br/><br/>
 
-			You're going to be able to make your branching paths so they end up pretty close to the second TriSplit, but you won't be able to make them match up exactly. So let's connect some nodes together. To connect two nodes, select the node you want to move, and then hold <b>shift</b> and select the node you want to connect it to. Press <b>ENTER</b> to snap the nodes together. <u>The node you selected first always moves to meet the node you selected second.</u><br/><br/>
+			You're going to be able to make your branching paths so they end up pretty close to the second TriSplit, but you won't be able to make them match up exactly. So let's connect some nodes together. To connect two nodes, select the node you want to move, and then hold <b>shift</b> and select the node you want to connect it to. Press <b>ENTER</b> to snap the nodes together. <b>The node you selected first always moves to meet the node you selected second.</b><br/><br/>
 
 			You can also select the road piece itself before selecting the first node. When you press enter, the entire road piece will move to so that the two nodes connect.
 		</div>
@@ -225,14 +225,12 @@
 		<span id='design'></span>
 		<h1>Level Design</h1>
 		<div class="mininav">
-
-			<a data-scroll href="#design1">Themes</a>
-			<a data-scroll href="#design2">Difficulty</a>
-			<a data-scroll href="#design3">Heat Management</a>
-			<a data-scroll href="#design4">Skips</a>
+			<a data-scroll href="#design1">Difficulty</a>
+			<a data-scroll href="#design2">Heat Management</a>
+			<a data-scroll href="#design3">Skips</a>
 		</div>
 
-		<span id="design3"></span>
+		<span id="design2"></span>
 		<div class="section">
 			<h2>Heat management</h2>
 			In some racing games, the boost is something you use occasionally when you want to go extra fast. In Distance, it's something you want to use <b>constantly</b>. However, boosting causes your car to heat up and eventually overheat, and the only things that can cool you down are cooldown rings, checkpoints, and tricks.<br/><br/>
@@ -244,7 +242,7 @@
 			</div>
 		</div>
 
-		<span id="design4"></span>
+		<span id="design3"></span>
 		<div class="section">
 			<h2>Skips</h2>
 			Skips. The bane of casual players everywhere!<br/><br/>
