--- a/index.html
+++ b/index.html
@@ -230,6 +230,19 @@
 			<a data-scroll href="#design3">Skips</a>
 		</div>
 
+		<span id="design1"></span>
+		<div class="section">
+			<h2>Difficulty</h2>
+			Hard levels are good! But there's good hard and bad hard. You'll always be better at your own level than everyone else will, so when you're trying to gauge the difficulty of your track, try to put yourself into other people's shoes. Here's some basic guidelines:
+			<ul>
+				<li>Try to keep the difficulty relatively consistent throughout the level.</li>
+				<li>Make sure people have enough time to react to obstacles. For example, don't have popup blockers that pop up without enough warning, don't have road transfers that are too close to each other, etc.</li>
+				<li>Use arrows to guide the player when the path through the level is ambiguous.</li>
+			</ul>
+
+			Think about how hard the level is to you. In all likelihood, it's going to be a few notches harder for everyone else, so keep this in mind!
+		</div>
+
 		<span id="design2"></span>
 		<div class="section">
 			<h2>Heat management</h2>
