Recorded some new smoother gifs

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<div class="section">
 			<h2>The Very Basics</h2>
 			<div class="big-image">
-				<img class="gfyitem" data-id="UnluckySophisticatedGreathornedowl" data-controls="false" />
+				<img class="gfyitem" data-id="TimelySaltyItaliangreyhound" data-controls="false" />
 			</div>
 			The first thing to do is delete the LevelEditorCarSpawner that comes with a new level. You won't really need it, as the beginning piece will automatically spawn a car there. You can use the LevelEditorCarSpawner to test the track starting from a certain point, though.<br/><br/>
 
@@ -61,7 +61,7 @@
 		<div class="section">
 			<h2>Checkpoints</h2>
 			<div class="big-image">
-				<img class="gfyitem" data-id="ReliableSelfassuredBordercollie" data-controls="false" />
+				<img class="gfyitem" data-id="DearFirmBarnowl" data-controls="false" />
 			</div>
 			Before we continue, we need to start getting in the habit of adding checkpoints.<br/><br/>
 
@@ -80,7 +80,7 @@
 		<div class="section">
 			<h2>Track Nodes</h2>
 			<div class="big-image">
-				<img class="gfyitem" data-id="CalmSimplisticAmurratsnake" data-controls="false" />
+				<img class="gfyitem" data-id="AbsoluteBeneficialBream" data-controls="false" />
 			</div>
 			So far we've only used the stock road pieces. Let's try manipulating the road pieces ourselves!<br/><br/>
 
@@ -93,7 +93,7 @@
 		<div class="section">
 			<h2>Multiple paths</h2>
 			<div class="big-image">
-				<img class="gfyitem" data-id="TautUncommonBlackandtancoonhound" data-controls="false" />
+				<img class="gfyitem" data-id="IckyNegativeLamb" data-controls="false" />
 			</div>
 			Time to add some branching paths. Add an <b>EmpireRoadTriSplit</b> to the end of the track. This piece is different from the previous track pieces we've used in that it has 3 nodes. To add track pieces to a specific node, just click that node and that add the track you want. This works for all sorts of track pieces.<br/><br/>
 
@@ -108,7 +108,7 @@
 		<div class="section">
 			<h2>Obstacles</h2>
 			<div class="big-image">
-				<img class="gfyitem" data-id="GorgeousTornJoey" data-controls="false" />
+				<img class="gfyitem" data-id="BadCarelessClownanemonefish" data-controls="false" />
 			</div>
 			Obstacles are placed just like any other object. You can find them in the "Obstacles" folder. Let's add some spinny lasers!<br/><br/>
 
@@ -176,6 +176,9 @@
 		<span id="visuals2"></span>
 		<div class="section">
 			<h2>Colors</h2>
+			<div class="big-image">
+				<img class="gfyitem" data-id="SpanishIncompleteDorking" data-controls="false" />
+			</div>
 			Utilizing colours is an important part of level editing in Distance. All of the objects are made up of different components, some of which represent behavior and some of which are physical components. Many of the physical components have color properties you can change. The different properties are:
 			<ul>
 				<li><b>Color</b>: This usually refers to the largest continuous part of the object. In the case of buildings its a good idea to set this to something that's easy on the eyes, as this will be one of the most prominent colors in your level.</li>
