This script seems to work better

--- a/index.html
+++ b/index.html
@@ -413,14 +413,7 @@
 </html>
 
 <!--gyfcat embed-->
-<script>
- (function(d, t) {
-    var g = d.createElement(t),
-        s = d.getElementsByTagName(t)[0];
-    g.src = 'http://assets.gfycat.com/js/gfyajax-0.517d.js';
-    s.parentNode.insertBefore(g, s);
-}(document, 'script'));
-</script>
+<script type"text/javascript" src="http://test.gfycat.com/gfycat_test_june25.js"></script>
 
 <!--smooth scrolling-->
 <script src="dist/js/smooth-scroll.js"></script>
