Added the performance section to the navigation

--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
 			<a data-scroll href="#visuals2">Colors</a>
 			<a data-scroll href="#visuals3">Decorations</a>
 			<a data-scroll href="#visuals4">Buildings</a>
+			<a data-scroll href="#visuals5">Performance</a>
 		</div>
 
 		<span id="visuals1"></span>
