--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 			</p>
 
 			<div class="big-image">
-				<img src="images/screenshots/247.jpg">
+				<img src="images/screenshots/bs.jpg">
 				<b>Broken Symmetry</b> (official level)
 			</div>
 
