--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
 </html>
 
 <!--gyfcat embed-->
-<script type"text/javascript" src="http://test.gfycat.com/gfycat_test_june25.js"></script>
+<script type="text/javascript" src="https://assets.gfycat.com/gfycat.js"></script>
 
 <!--smooth scrolling-->
 <script src="dist/js/smooth-scroll.js"></script>
