--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
 			</p>
 		</div>
 
-		<span id='basics'></span>
-		<h1>Basic Level Creation</h1>
+		<h1 id='basics'>Basic Level Creation</h1>
 		<div class="mininav">
 			<a data-scroll href="#basics1">The Very Basics</a>
 			<a data-scroll href="#basics2">Checkpoints</a>
@@ -44,8 +43,7 @@
 			<a data-scroll href="#basics6">Uploading to Steam Workshop</a>
 		</div>
 
-		<span id='basics1'></span>
-		<div class="section">
+		<div class="section" id='basics1'>
 			<h2>The Very Basics</h2>
 			<div class="big-image">
 				<img class="gfyitem" data-id="TimelySaltyItaliangreyhound" data-controls="false" />
@@ -67,8 +65,7 @@
 			</p>
 		</div>
 
-		<span id='basics2'></span>
-		<div class="section">
+		<div class="section" id='basics2'>
 			<h2>Checkpoints</h2>
 			<div class="big-image">
 				<img class="gfyitem" data-id="DearFirmBarnowl" data-controls="false" />
@@ -90,8 +87,7 @@
 			</p>
 		</div>
 
-		<span id='basics3'></span>
-		<div class="section">
+		<div class="section" id='basics3'>
 			<h2>Track Nodes</h2>
 			<div class="big-image">
 				<img class="gfyitem" data-id="AbsoluteBeneficialBream" data-controls="false" />
@@ -107,8 +103,7 @@
 			</p>
 		</div>
 
-		<span id='basics4'></span>
-		<div class="section">
+		<div class="section" id='basics4'>
 			<h2>Multiple paths</h2>
 			<div class="big-image">
 				<img class="gfyitem" data-id="IckyNegativeLamb" data-controls="false" />
@@ -127,8 +122,7 @@
 			</p>
 		</div>
 
-		<span id='basics5'></span>
-		<div class="section">
+		<div class="section" id='basics5'>
 			<h2>Obstacles</h2>
 			<div class="big-image">
 				<img class="gfyitem" data-id="BadCarelessClownanemonefish" data-controls="false" />
@@ -147,8 +141,7 @@
 			</div>
 		</div>
 
-		<span id='basics6'></span>
-		<div class="section">
+		<div class="section" id='basics6'>
 			<h2>Uploading to Steam Workshop</h2>
 			<p>
 				Is your level done? It's time to upload it, then! First, check a few things:
@@ -162,18 +155,17 @@
 			</p>
 		</div>
 
-		<span id='visuals'></span>
-		<h1>Visuals</h1>
+		<h1 id='visuals'>Visuals</h1>
 		<div class="mininav">
 			<a data-scroll href="#visuals1">Themes</a>
 			<a data-scroll href="#visuals2">Colors</a>
 			<a data-scroll href="#visuals3">Decorations</a>
 			<a data-scroll href="#visuals4">Buildings</a>
 			<a data-scroll href="#visuals5">Performance</a>
+			<a data-scroll href="#visuals6">Lights</a>
 		</div>
 
-		<span id="visuals1"></span>
-		<div class="section">
+		<div class="section" id='visuals1'>
 			<h2>Themes</h2>
 			<p>
 				Its a good idea to work with a theme in mind. There are lots of different ways to combine visual elements and create a unique theme. A level with a unique theme can go long way to making it a better overall level. But there are also loads of really good levels that work with some of the "basic" themes, or even the default theme of Distance! Here are 3 examples of levels with different themes.
@@ -213,8 +205,7 @@
 			</p>
 		</div>
 
-		<span id="visuals2"></span>
-		<div class="section">
+		<div class="section" id='visuals2'>
 			<h2>Colors</h2>
 			<div class="big-image">
 				<img class="gfyitem" data-id="SpanishIncompleteDorking" data-controls="false" />
@@ -229,8 +220,7 @@
 			</p>
 		</div>
 
-		<span id="visuals3"></span>
-		<div class="section">
+		<div class="section" id='visuals3'>
 			<h2>Decorations</h2>
 			<p>
 				Let's start by placing a lamp on the track. First move the cursor so it's on the side (or railing) of the track you want the lamp to be on. Add an <b>EmpireLamp</b> from the "Decorations" folder. Once you placed the lamp make sure it looks like its actually connected to the track! Use Alt + S to rotate it correctly, and use the movement gizmos to get the alignment just right. Once it looks like it's actually connected to the track, attach it (<b>Shift + A</b>). Once we have done this it will follow the road if we move it and we can easily duplicate it just like the checkpoints.
@@ -240,8 +230,7 @@
 			</div>
 		</div>
 
-		<span id="visuals4"></span>
-		<div class="section">
+		<div class="section" id='visuals4'>
 			<h2>Buildings</h2>
 			<p>
 				Adding buildings is simple. First, go to the <b>"Buildings"</b> folder in the library. Once you've found the building you want to add, double click it to spawn it at the cursor location. You can then move and rotate the building to where you want them using the move, rotate, and scale gizmos.
@@ -251,8 +240,7 @@
 			</div>
 		</div>
 
-		<span id="visuals5"></span>
-		<div class="section">
+		<div class="section" id='visuals5'>
 			<h2>Performance</h2>
 			<p>
 				Be careful when decorating your level. Putting too many objects in a level will make it lose FPS (frames per second). That's why it's generally a good idea to always have the frames per second counter showing. To enable it press <b>ALT + F10</b>.
@@ -274,16 +262,14 @@
 			</p>
 		</div>
 
-		<span id='design'></span>
-		<h1>Level Design</h1>
+		<h1 id='design'>Level Design</h1>
 		<div class="mininav">
 			<a data-scroll href="#design1">Difficulty</a>
 			<a data-scroll href="#design2">Heat Management</a>
 			<a data-scroll href="#design3">Skips</a>
 		</div>
 
-		<span id="design1"></span>
-		<div class="section">
+		<div class="section" id='design1'>
 			<h2>Difficulty</h2>
 			<p>
 				Hard levels are good! But there's good hard and bad hard. You'll always be better at your own level than everyone else will, so when you're trying to gauge the difficulty of your track, try to put yourself into other people's shoes. Here's some basic guidelines:
@@ -298,8 +284,7 @@
 			</p>
 		</div>
 
-		<span id="design2"></span>
-		<div class="section">
+		<div class="section" id='design2'>
 			<h2>Heat management</h2>
 			<p>
 				In some racing games, the boost is something you use occasionally when you want to go extra fast. In Distance, it's something you want to use <b>constantly</b>. However, boosting causes your car to heat up and eventually overheat, and the only things that can cool you down are cooldown rings, checkpoints, and tricks.
@@ -312,8 +297,7 @@
 			</div>
 		</div>
 
-		<span id="design3"></span>
-		<div class="section">
+		<div class="section" id='design3'>
 			<h2>Skips</h2>
 			<p>
 				Skips. The bane of casual players everywhere!
@@ -335,9 +319,8 @@
 				</ul>
 			</p>
 		</div>
-
-		<span id='glossary'></span>
-		<h1>Glossary</h1>
+		
+		<h1 id='glossary'>Glossary</h1>
 
 		<div class="section">
 			<h2>UI elements</h2>
