--- a/index.html
+++ b/index.html
@@ -155,14 +155,15 @@
 			</p>
 		</div>
 
+		
 		<h1 id='visuals'>Visuals</h1>
 		<div class="mininav">
 			<a data-scroll href="#visuals1">Themes</a>
 			<a data-scroll href="#visuals2">Colors</a>
 			<a data-scroll href="#visuals3">Decorations</a>
 			<a data-scroll href="#visuals4">Buildings</a>
-			<a data-scroll href="#visuals5">Performance</a>
-			<a data-scroll href="#visuals6">Lights</a>
+			<a data-scroll href="#visuals5">Lights</a>
+			<a data-scroll href="#visuals6">Performance</a>
 		</div>
 
 		<div class="section" id='visuals1'>
@@ -182,7 +183,7 @@
 
 			<div class="big-image">
 				<img src="images/screenshots/contraband.jpg">
-				<b>Contraband Delivery</b> by Quargzon
+				<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=304381266">Contraband Delivery</a> by Quargzon
 			</div>
 
 			<p>
@@ -191,7 +192,7 @@
 
 			<div class="big-image">
 				<img src="images/screenshots/cubic.jpg">
-				<b>Cubic</b> by Da Ham
+				<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=309250039">Cubic</a> by Da Ham
 			</div>
 
 			<p>
@@ -240,7 +241,22 @@
 			</div>
 		</div>
 
-		<div class="section" id='visuals5'>
+	    <div class="section" id='visuals5'>
+			<h2> Ligthing </h2>
+			There are three types of lights in distance:
+			<ul>
+				<li> Ambient lights </li>
+				<li> Point lights </li>
+				<li> Directional lights </li>
+			</ul>
+			
+			<p>
+				<b> Ambient lighting </b> is a background light which lights every direction up an equal amount
+			</p>
+		
+		</div>
+		
+		<div class="section" id='visuals6'>
 			<h2>Performance</h2>
 			<p>
 				Be careful when decorating your level. Putting too many objects in a level will make it lose FPS (frames per second). That's why it's generally a good idea to always have the frames per second counter showing. To enable it press <b>ALT + F10</b>.
@@ -320,6 +336,7 @@
 			</p>
 		</div>
 		
+		<span id='glossary'></span>
 		<h1 id='glossary'>Glossary</h1>
 
 		<div class="section">
