--- a/index.html
+++ b/index.html
@@ -252,8 +252,30 @@
 			
 			<p>
 				<b> Ambient lighting </b> is a background light which lights every direction up an equal amount
+				there are three sources of this ambient light: the sky, the quator, and the floor. All three of
+				these sources are modified through the level settings tab where you can adjust their colour and
+				intensity.
+			</p>
+			
+			<p>
+				<b> Point lights </b> are objects you can place to give your self more control over the lighting 
+				in your level. These allow you to highlight objects in your map and bring out details. 
+				<div class=big-image>
+					For reference here is what the same scene looks like with only ambient lighting.
+					<img src="images/lights/ambient.png">
+				</div>
+				<div class=big-image>
+					Now with point lights.
+					<img src="images/lights/point.png">
+				</div>
 			</p>
 		
+			<p>
+				Finally <b> directional lights </b> are lights that sit out in your sky box and project light into 
+				your level. Each level has at most one, all though you can modify it's properties through biodomes.
+				Moreover it is the only light in distance which casts a shadow. We will talk more about this one in 
+				the biodome section.
+			</p>
 		</div>
 		
 		<div class="section" id='visuals6'>
@@ -463,6 +485,8 @@
 			People who also helped:
 			<ul>
 				<li>CyclopsDragon</li>
+				<li>pigpenguin</li>
+				<li>Ashamael</li>
 			</ul>
 		</div>
 	</div>
