--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Distance Unofficial Level Editor Guide</title>
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="style.css"/>
+	<link rel="shortcut icon" type="image/png" href="favicon.png">
 </head>
 <body>
 	<div class="header">
