--- a/index.html
+++ b/index.html
@@ -262,13 +262,15 @@
 				<b> Point lights </b> are objects you can place to give your self more control over the lighting 
 				in your level. These allow you to highlight objects in your map and bring out details. 
 				<div class=big-image>
-					For reference here is what the same scene looks like with only ambient lighting.
+					For reference here is what a scene looks like with only ambient lighting.
 					<img src="images/lights/ambient.png">
 				</div>
 				<div class=big-image>
-					Now with point lights.
+					Now the same scene with point lights.
 					<img src="images/lights/point.png">
 				</div>
+				
+				For these reasons it is highly suggested that you don't only light your map using ambient light.
 			</p>
 		
 			<p>
