Minor lighting changes

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 				<b> Point lights </b> are objects you can place to give your self more control over the lighting 
 				in your level. These allow you to highlight objects in your map and bring out details. 
 				<div class=big-image>
-					For reference here is what a scene looks like with only ambient lighting.
+					For reference here is what a scene looks like without point
 					<img src="images/lights/ambient.png">
 				</div>
 				<div class=big-image>
@@ -270,7 +270,7 @@
 					<img src="images/lights/point.png">
 				</div>
 				
-				For these reasons it is highly suggested that you don't only light your map using ambient light.
+				For these reasons you should be illuminating your scenes with a combination of ambient, point, and directional lights.
 			</p>
 		
 			<p>
@@ -364,7 +364,21 @@
 			</p>
 		</div>
 		
-		<span id='glossary'></span>
+		<h1 id='info'>More Info</h1>
+		<div class="section">
+			<p> 
+				This guide is far from comprehensive (we're working on it I swear) the best place to get more
+				information is to come to our <a href="https://discord.gg/TtQpmAH"> discord channel </a> and ask.
+				
+			</p>
+			
+			<p>
+				If there is something you want added feel free to hit me (pigpenguin) up over on the discord.
+				Or if you are up to it, fork the 
+				<a href="https://github.com/pigpenguin/distance-level-editor-guide"> repo</a> and send me a pull request.
+			</p>
+		</div>
+		
 		<h1 id='glossary'>Glossary</h1>
 
 		<div class="section">
