--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 				<b> Point lights </b> are objects you can place to give your self more control over the lighting 
 				in your level. These allow you to highlight objects in your map and bring out details. 
 				<div class=big-image>
-					For reference here is what a scene looks like without point
+					For reference here is what a scene looks like without point lights.
 					<img src="images/lights/ambient.png">
 				</div>
 				<div class=big-image>
